@@ -4,7 +4,9 @@ Changelog
 2.12.3 (unreleased)
 -------------------
 
-- TBD
+- Added EDT timezone support. Addresses bug #599856.
+  [vangheem]
+  
 
 2.12.2 (2010-05-05)
 -------------------
